--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./client/src:/var/www/html/
+      - ./client/:/var/www/html/
     ports:
       - 1337:80
   db:
